lintian-brush (0.71) UNRELEASED; urgency=medium

  * When dropping get-orig-source target, also update .PHONY.
  * Remove .PHONY when removing a component from it leaves it empty.
  * Add support for reading upstream metadata from pom.xml.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 09 Jun 2020 18:18:59 +0000

lintian-brush (0.70) unstable; urgency=medium

  * systemd-service-file-pidfile-refers-to-var-run: Also update other
    references to pid file.
  * built-using-field-on-arch-all-package: Only fix for golang packages
    for now.
  * Drop use of pkginfo and just use email.message to parse PKG-INFO
    files.
  * Add support for retrieving upstream metadata from Cargo.toml.
  * license-file-listed-in-debian-copyright: Properly remove Files
    entries with just newlines.
  * Update to follow renames of tags in lintian 2.80.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 08 Jun 2020 22:43:10 +0000

lintian-brush (0.69) unstable; urgency=medium

  * debian-changelog-line-too-long: Only claim lintian tags were fixed
    when fixing long lines in the last changelog entry.
  * Only scan for 'DO NOT EDIT' in the header of control files. Closes:
    #961601
  * Fix handling of version increases when the existin version ends in
    something that is not a digit.
  * Handle MemoryError from fixers, rather than letting them crash all
    of lintian-brush. Closes: #961810
  * Add really basic package-has-no-description fixer. Certainty for
    this fixer is set to 'possible', so it is not run by default.
  * Add fixer for no-section-field and no-section-field-for-source.
  * Add fixer for no-maintainer-field.
  * Add fixer for no-priority-field.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 31 May 2020 00:23:09 +0000

lintian-brush (0.68) unstable; urgency=medium

  * missing-build-dependency-for-dh_-command: Support checking Build-
    Depends-Indep and Build-Depends-Arch.
  * Properly break lines when adding changelog entries.